--- a/style.css
+++ b/style.css
@@ -82,6 +82,159 @@ input {
     width: 160px;
 }
 
+.top-wrapper {
+    width: 100%;
+    position: absolute;
+    height: 436px;
+    left: 0px;
+    top: 0px;
+    background: radial-gradient(circle at top left, #388ACD, #105389);
+
+    
+}
+
+    @media (max-width: 1000px) {
+        .top-wrapper {width: 50%}
+    }
+
+    @media (max-width: 670px) {
+        .top-wrapper {
+          width: 100%;
+        }
+      }
+
+h1 {
+    position: absolute;
+    width: 440px;
+    height: 160px;
+    left: 120px;
+    top: 61px;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 70px;
+    line-height: 80px;
+    /* or 114% */
+
+    letter-spacing: 0.3px;
+
+    color: #FFFFFF;
+}
+
+p {
+    position: absolute;
+    width: 317px;
+    height: 52px;
+    left: 135px;
+    top: 226px;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    /* or 114% */
+
+    letter-spacing: 0.3px;
+
+    color: #FFFFFF;
+    padding-top: 20px;
+}
+
+.btn-buy {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 6px 20px;
+
+    position: absolute;
+    width: 90px;
+    height: 25px;
+    left: 120px;
+    top: 337px;
+
+    background: #FFFFFF;
+    border-radius: 20px;
+
+    position: static;
+    width: 69px;
+    height: 26px;
+    left: 20px;
+    top: 6px;
+    
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    /* identical to box height, or 162% */
+    
+    letter-spacing: 0.3px;
+    
+    color: #105389;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 345px 130px;
+    text-decoration-line: none;
+}
+
+.btn-explore {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 6px 20px;
+
+    position: absolute;
+    width: 104px;
+    height: 36px;
+    left: 255px;
+    top: 345px;
+
+    border: 1px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 20px;
+
+    text-decoration-line: none;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    /* identical to box height, or 162% */
+
+    letter-spacing: 0.3px;
+    color: #FFFFFF;
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px 10px;
+    
+    
+}
+
+.content-item {
+    position: absolute;
+    left: 878px;
+    top: 64px;
+    bottom: 600px
+
+
+
+}
+
+.contents-item {
+    position: absolute;
+    left: 702px;
+    top: 220px;
+
+
+}
+
 footer{
     height: 451px;
     background: radial-gradient(100% 805.5% at 100% 100%, #105389 0%, #388ACD 100%)
