--- a/style.css
+++ b/style.css
@@ -18,9 +18,6 @@ header {
     background: radial-gradient(circle at top left, #388ACD, #105389);
 }
 
-h1{
-    font-size: 70px;
-}
 h2{
     font-size: 40px;
 }
@@ -36,9 +33,7 @@ h4{
 h5{
     font-size: 16px;
 }
-p{
-    font-size: 14px;
-}
+
 
 a{
     color: white;
@@ -84,13 +79,8 @@ input {
 
 .top-wrapper {
     width: 100%;
-    position: absolute;
     height: 436px;
-    left: 0px;
-    top: 0px;
     background: radial-gradient(circle at top left, #388ACD, #105389);
-
-    
 }
 
     @media (max-width: 1000px) {
@@ -104,12 +94,6 @@ input {
       }
 
 h1 {
-    position: absolute;
-    width: 440px;
-    height: 160px;
-    left: 120px;
-    top: 61px;
-
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 600;
@@ -121,14 +105,21 @@ h1 {
 
     color: #FFFFFF;
 }
-
-p {
+.container h1{
+    position: absolute;
+    width: 440px;
+    height: 160px;
+    left: 120px;
+    top: 61px;
+}
+.container p{
     position: absolute;
     width: 317px;
     height: 52px;
     left: 135px;
     top: 226px;
-
+}
+p {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 400;
@@ -212,7 +203,7 @@ p {
 }
 
 .content-item {
-    position: absolute;
+    position:absolute;
     left: 878px;
     top: 64px;
     bottom: 600px
@@ -222,7 +213,7 @@ p {
 }
 
 .contents-item {
-    position: absolute;
+    position:absolute;
     left: 702px;
     top: 220px;
 
@@ -240,7 +231,6 @@ p {
 }
 
 .testi {
-    position: absolute;
     width: 75%;
 }
 
@@ -266,13 +256,11 @@ h4 span {
 .name-cust {
     margin-top: 214px;
     margin-bottom: 50px;
-    position: absolute;
     color: #333333;
 }
 
 .name-cust img {
     margin-top: 20px;
-    position: absolute;
 }
 
 .name-cust p {
@@ -283,13 +271,11 @@ h4 span {
 }
 
 .offer {
-    position: absolute;
     text-align: center;
     width: 100%;
 }
 
 .offer p {
-    position: absolute;
     width: 100%;
     top: 80px;
     color: #333333;
@@ -383,11 +369,8 @@ footer{
 }
 
 .footer-bottom{
-    position: absolute;
     width: 400px;
     height: 42px;
-    left: 500px;
-    top: 450px;
     color: white;  
     text-align: center; 
 }
