--- a/style.css
+++ b/style.css
@@ -198,8 +198,6 @@ p {
     order: 0;
     flex-grow: 0;
     margin: 0px 10px;
-    
-    
 }
 
 .content-item {
@@ -207,9 +205,6 @@ p {
     left: 878px;
     top: 64px;
     bottom: 600px
-
-
-
 }
 
 .contents-item {
@@ -221,7 +216,7 @@ p {
 }
 
 .container {
-    width: 1280px;
+    width: 100%;
     padding: 0 120px;
     margin: 0 auto;
 }
@@ -240,7 +235,7 @@ h2 {
     color: #333333;
 }
 
-h4 {
+.testi h4 {
     color:#333333;
     font-size: 18px;
     margin-top: 32px;
@@ -248,7 +243,7 @@ h4 {
     letter-spacing: 0.3px;
 }
 
-h4 span {
+.testi span {
     font-weight: normal;
     color: #333333;
 }
@@ -369,8 +364,9 @@ footer{
 }
 
 .footer-bottom{
-    width: 400px;
+    width: 100%;
     height: 42px;
     color: white;  
     text-align: center; 
+    padding-top: 225px;
 }
