--- a/style.css
+++ b/style.css
@@ -201,7 +201,31 @@ p {
 
 
 }
+/* product --start-- */
 
+.product{
+    width: 100%;
+    height: 564px;
+    background: linear-gradient(0deg, rgba(16,83,137,1) 0%, rgba(16,83,137,1) 36%, rgba(255,255,255,1) 36%);
+}
+
+.section-title{
+    text-align: center;
+    padding-top: 50px;
+}
+.product-items{
+    padding-left: 300px;
+    padding-top: 20px;
+}
+.product-item{
+    float:left;
+    text-align: center;
+    padding-right: 80px;
+    width: 25%;
+    color: white;
+}
+
+/* product --stop-- */
 .message-wrapper {
     height: 374px;
     width: 100%;
